deploy/redis.yml
apiVersion: v1
kind: Namespace
metadata:
  name: redis

---

apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: redis
  labels:
    app: redis
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
    - containerPort: 6379
    resources:
      limits:
        memory: "1Gi"

---

kind: Service
apiVersion: v1
metadata:
  name: redis-queue
  namespace: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379

---

kind: Service
apiVersion: v1
metadata:
  name: redis-db
  namespace: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-external
  namespace: redis
spec:
  type: NodePort
  selector: 
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30000
