deploy/shipment-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shipment-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-app-deployment
  namespace: shipment-app
  labels:
    app: shipment-app
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: shipment-app
  template:
    metadata:
      labels:
        app: shipment-app
    spec:
      containers:
      - name: shipment-app-container
        image: shipment-app:latest
        imagePullPolicy: Never  # kind can't find the local image without this parameter
        ports:
        - containerPort: 5000
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pop-deployment
  namespace: shipment-app
  labels:
    app: redis-pop
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: redis-pop
  template:
    metadata:
      labels:
        app: redis-pop
    spec:
      containers:
      - name: redis-pop-container
        image: shipment-app:latest
        command: ["python"]
        args: ["pop_redis.py"]
        imagePullPolicy: Never  # kind can't find the local image without this parameter
        ports:
        - containerPort: 5000
---

kind: Service
apiVersion: v1
metadata:
  name: webapp
  namespace: shipment-app
spec:
  selector:
    app: shipment-app
  ports:
  # Default port used by the image
  - port: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipment-app-ingress
  namespace: shipment-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /webapp(/|$)(.*)
        backend:
          service:
            name: webapp
            port:
              number: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipment-api-ingress
  namespace: shipment-app
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: webapp
            port:
              number: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brontosaurus-connector-ingress
  namespace: shipment-app
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /brontosaurus(/|$)(.*)
        backend:
          service:
            name: webapp
            port:
              number: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  type: NodePort
  selector: 
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30000
